# GameEngine

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md  vcpkg.json
cmake/: Dependencies.cmake
docs/: dependencies.md  prd-18-missing-items.md  stacked-branches.md
docs/adr/: 0001-separate-window-system-and-renderer.md  0002-use-engine-owned-logging-handles.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: ezbuild.sh  ezcommit.sh  ezcoverage.sh  ezformat.sh  ezgaunlet.sh  ezpath.sh  ezprepare.sh  ezrun.sh  eztest.sh  printHelper.sh
scripts/core/: ezprepare.sh
scripts/coverage/: ezcoverage.sh
scripts/deliver/: ezdeliver.sh
scripts/install/: ezinstall.sh
scripts/run/: ezrun.sh
scripts/test/: eztest.sh  testHelper.sh
src/: CMakeLists.txt  main.cpp
src/Engine/Core/: Logger.cpp  Logger.hpp  Paths.cpp  Paths.hpp
src/Engine/Input/: InputCodes.hpp  InputEvent.hpp  InputSystem.cpp  InputSystem.hpp
src/Engine/Rendering/: Renderer.cpp  Renderer.hpp
src/Engine/Rendering/Internal/: GraphicsSurfaceFactory.hpp  OpenGLRenderingBackend.cpp  OpenGLRenderingBackend.hpp  RenderingBackend.hpp
src/Engine/Runtime/: Context.cpp  Context.hpp
src/Engine/Windowing/: WindowSystem.cpp  WindowSystem.hpp
tests/: CMakeLists.txt
tests/support/: ConsoleCapture.hpp  LogAssertions.hpp  SpdlogTestGuard.hpp  TestTempDirectory.hpp
tests/unit/Core/: LoggerTests.cpp  PathsTests.cpp  Test_ConsoleCapture.cpp  Test_LogAssertions.cpp  Test_Logger.cpp  Test_LoggingSystem.cpp  Test_Paths.cpp
tests/unit/Input/: Test_InputSystem.cpp
tests/unit/Rendering/: Test_Renderer.cpp
tests/unit/Runtime/: Test_Context.cpp
tests/unit/Windowing/: Test_WindowSystem.cpp
